# vendor_yhuan

./: README.md
docs/1/: 1.sh  readme.md
mp135_standard/: config.json  ohos.build
mp135_standard/etc/: BUILD.gn
mp135_standard/etc/para/: hardware_mp135_standard.para  product_mp135_standard.para
